--- a/cube.css
+++ b/cube.css
@@ -23,7 +23,7 @@
 * {
     font-family: 'yellowtail';
     color: white;
-    text-shadow: 0 0 3px black, 0 0 3px black;
+    text-shadow: 0 0 3px #000, 0 0 3px #000;
     padding: 0;
     margin: 0;
     user-select: none;
@@ -33,7 +33,7 @@
 body {
     background: coral;
     width:100%;
-    height: 100vh;
+    min-height: 720px;
 }
 
 #container {
@@ -41,9 +41,13 @@ body {
     flex-wrap: wrap;
     justify-content: center;
     grid-gap: 10px;
-    margin-top: 40px;
+    margin-top: 60px;
     margin-left: 20px;
     margin-right: 20px;
+}
+
+img {
+    opacity: 0.8;
 }
 
 #topPanel {
@@ -66,7 +70,7 @@ body {
 .classDiv {
     width: 170px;
     height: 170px;
-    box-shadow: 7px 7px 25px 0px black, 7px 7px 25px 0px grey;
+    box-shadow: 7px 7px 25px 0px #000, 7px 7px 25px 0px grey;
     border: none;
     transition: 1.5s;
     border-radius: 5px;
@@ -80,7 +84,7 @@ span {
     color: burlywood;
     font-size: 70px;
     font-weight: bold;
-    text-shadow: 0 2 10px black;
+    text-shadow: 0 2 10px #000;
     font-variant-numeric: tabular-nums;
     width: 20px;
 }
@@ -90,7 +94,7 @@ p {
     /* font-family: 'Yellowtail', cursive; */
     font-size: 70px;
     font-weight: bold;
-    text-shadow: 0 2 10px black;
+    text-shadow: 0 2 10px #000;
     margin: 0;
     width: 20px;
 }
@@ -128,7 +132,7 @@ h2 {
     margin-top: 120px;
     width: 325px;
     height: 325px;
-    border: 2px solid black;
+    border: 2px solid #000;
     border-radius: 100%;
     display: flex;
     justify-content: center;
@@ -136,6 +140,122 @@ h2 {
     background: burlywood;
     color:gold;
     font-family: 'Sansita Swashed', cursive;
-    text-shadow: 0 0 3px black, 0 0 3px black;
-    box-shadow: 0 0 5px 2px black, 0 0 5px 2px;
+    text-shadow: 0 0 3px #000, 0 0 3px #000;
+    box-shadow: 0 0 5px 2px #000, 0 0 5px 2px;
+}
+
+@media screen and (max-width: 1000px){
+    .classDiv {
+        width: 150px;
+        height: 150px;
+    }
+
+    span {
+        font-size: 60px;
+    }
+
+    h1 {
+        font-size: 45px;
+    }
+
+    #naslov {
+        justify-content: space-around;
+    }
+}
+
+@media screen and (max-width: 800px){
+    .classDiv {
+        width: 130px;
+        height: 130px;
+    }
+
+    h2 {
+        font-size: 150px;
+    }
+
+    span {
+        font-size: 50px;
+    }
+
+    h1 {
+        font-size: 35px;
+    }
+}
+
+@media screen and (max-width: 660px){
+    .classDiv {
+        width: 110px;
+        height: 110px;
+    }
+
+    h2 {
+        font-size: 120px;
+    }
+
+    span {
+        font-size: 40px;
+    }
+
+    h1 {
+        font-size: 28px;
+    }
+    #naslov {
+        height: 60px;
+    }
+
+    #topPanel {
+        height: 55px;
+    }
+    
+    #container {
+        margin-top: 40px;       
+    }
+}
+
+@media screen and (max-width: 550px){
+    .classDiv {
+        width: 90px;
+        height: 90px;
+    }
+
+    h2 {
+        font-size: 100px;
+    }
+
+}
+
+@media screen and (max-width: 450px){
+    .classDiv {
+        width: 75px;
+        height: 75px;
+    }
+
+    .class_div {
+        width: 250px;
+        height: 250px;
+    }
+
+    h2 {
+        font-size: 85px;
+    }
+
+    img {
+        width: 230px;
+        height: 230px;
+    }
+}
+
+@media screen and (max-width: 360px){
+    .classDiv {
+        width: 70px;
+        height: 70px;
+    }
+
+    h2 {
+        font-size: 75px;
+    }
+
+    h1 {
+        font-size: 25px;
+    }
 }
